# My-Files-Classifier

./: .gitignore  QUICKSTART.md  README.md  config.yaml  history.jsonl  pyproject.toml  run.py  settings.json  test_example.py
debug/: 616bb1cc-0ca7-4e8e-9ac1-0089254ecadf.txt  844cf281-32b2-4aef-b045-2f2b3dd80c18.txt  latest
projects/-home-codespace--claude/: 616bb1cc-0ca7-4e8e-9ac1-0089254ecadf.jsonl
shell-snapshots/: snapshot-bash-1760595341942-rss3fn.sh
src/: __init__.py
src/app/: __init__.py  main.py
src/models/: __init__.py  anthropic_model.py  google_model.py  llm_base.py  model_factory.py  openai_model.py
src/services/: __init__.py  classifier.py
src/utils/: __init__.py  config.py
statsig/: statsig.session_id.2656274335  statsig.stable_id.2656274335
templates/: index.html
